# mdns-dns-proxy

./: .dockerignore  CONFIGURATION.md  Cargo.toml  LICENSE  README.md  RFC8766_REQUIREMENTS.md  TESTING.md  TESTING_UNIT.md  config.example.toml  rfc8766.txt  test-config.toml
.github/workflows/: check.yml  release.yml
doc/: mdns-dns-proxy.1  mdns-dns-proxy.toml.5
docker/: .env.example  Dockerfile  Dockerfile.alpine  docker-compose.yml
packaging/: mdns-dns-proxy.service
src/: config.rs  dns_handler.rs  lib.rs  main.rs  mdns_resolver.rs
src/dns_handler/: admin_records.rs  handler.rs  mod.rs  tests.rs  utils.rs
src/mdns_resolver/: cache.rs  mod.rs  query.rs  resolver.rs  tests.rs
tests/: mdns_resolution.rs  rfc8766_compliance.rs
tests/docker/: Dockerfile.test  README.md  docker-compose.yml
tests/docker/config/: config.toml
tests/docker/mdns-dns-proxy-test-runner/: package-lock.json  package.json  tsconfig.json
tests/docker/mdns-dns-proxy-test-runner/tests/: a.test.ts
