[package]
name = "mdns-dns-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive", "env"] }
hickory-proto = "0.25.2"
hickory-server = "0.25.2"
mdns-sd = "0.17.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
